--- a/index.html
+++ b/index.html
@@ -530,11 +530,11 @@
 
 			<div class="sp-slide">
 				<img class="sp-image" src="../src/css/images/blank.gif" 
-					data-src="http://bqworks.net/slider-pro/images/image9_medium.JPG" 
-					data-small="http://bqworks.net/slider-pro/images/image9_small.JPG"
-					data-medium="http://bqworks.net/slider-pro/images/image9_medium.JPG"
-					data-large="http://bqworks.net/slider-pro/images/image9_large.JPG"
-					data-retina="http://bqworks.net/slider-pro/images/image9_large.JPG"/>
+					data-src="./assets/img/portfolio/fullsize/Bett9.jpg" 
+					data-small="./assets/img/portfolio/fullsize/Bett9.jpg"
+					data-medium="./assets/img/portfolio/fullsize/Bett9.jpg"
+					data-large="./assets/img/portfolio/fullsize/Bett9.jpg"
+					data-retina="./assets/img/portfolio/fullsize/Bett9.jpg"/>
 
 				<p class="sp-layer sp-black sp-padding" 
 					data-horizontal="50" data-vertical="50"
@@ -551,11 +551,11 @@
 
 			<div class="sp-slide">
 				<img class="sp-image" src="../src/css/images/blank.gif" 
-					data-src="http://bqworks.net/slider-pro/images/image10_medium.JPG" 
-					data-small="http://bqworks.net/slider-pro/images/image10_small.JPG"
-					data-medium="http://bqworks.net/slider-pro/images/image10_medium.JPG"
-					data-large="http://bqworks.net/slider-pro/images/image10_large.JPG"
-					data-retina="http://bqworks.net/slider-pro/images/image10_large.JPG"/>
+					data-src="./assets/img/portfolio/fullsize/Bett10.JPG" 
+					data-small="./assets/img/portfolio/fullsize/Bett10.JPG"
+					data-medium="./assets/img/portfolio/fullsize/Bett10.JPG"
+					data-large="./assets/img/portfolio/fullsize/Bett10.JPG"
+					data-retina="./assets/img/portfolio/fullsize/Bett10.JPG"/>
 			</div>
 		</div>
 
@@ -568,8 +568,8 @@
 			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Bett6.JPG"/>
 			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Bett7.JPG"/>
 			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Bett8.JPG"/>
-			<img class="sp-thumbnail" src="http://bqworks.net/slider-pro/images/image9_thumbnail.JPG"/>
-			<img class="sp-thumbnail" src="http://bqworks.net/slider-pro/images/image10_thumbnail.JPG"/>
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Bett9.jpg"/>
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Bett10.JPG"/>
 		</div>
     </div>	
 	<section class="page-section" id="services">
