--- a/index.html
+++ b/index.html
@@ -391,11 +391,11 @@
 
 			<div class="sp-slide">
 				<img class="sp-image" src="../src/css/images/blank.gif" 
-					data-src="./assets/img/portfolio/fullsize/Bett9.jpg" 
-					data-small="./assets/img/portfolio/fullsize/Bett9.jpg"
-					data-medium="./assets/img/portfolio/fullsize/Bett9.jpg"
-					data-large="./assets/img/portfolio/fullsize/Bett9.jpg"
-					data-retina="./assets/img/portfolio/fullsize/Bett9.jpg"/>
+					data-src="./assets/img/portfolio/fullsize/Bett9.JPG" 
+					data-small="./assets/img/portfolio/fullsize/Bett9.JPG"
+					data-medium="./assets/img/portfolio/fullsize/Bett9.JPG"
+					data-large="./assets/img/portfolio/fullsize/Bett9.JPG"
+					data-retina="./assets/img/portfolio/fullsize/Bett9.JPG"/>
 
 			</div>
 
@@ -418,7 +418,7 @@
 			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Bett6.JPG"/>
 			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Bett7.JPG"/>
 			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Bett8.JPG"/>
-			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Bett9.jpg"/>
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Bett9.JPG"/>
 			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Bett10.JPG"/>
 		</div>
     </div>	
