--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@
 			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Küche_9.JPG"/>
 			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Küche_10.JPG"/>
 		</div>	
+    </div>	
 	<section class="page-section" id="services">
         <div class="container">
             <h2 class="text-center mt-0">Schlafzimmer</h2>
