--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             </div>
         </div>
     </section>
-	<section class="page-section" id="services">
+	<section class="page-section" id="portfolio">
         <div class="container">
             <h2 class="text-center mt-0">Küchen</h2>
             <hr class="divider my-4" />
@@ -302,7 +302,7 @@
 			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Küche_10.JPG"/>
 		</div>	
     </div>	
-	<section class="page-section" id="services">
+	<section class="page-section" id="portfolio">
         <div class="container">
             <h2 class="text-center mt-0">Schlafzimmer</h2>
             <hr class="divider my-0" />
@@ -422,7 +422,7 @@
 			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Bett_10.JPG"/>
 		</div>
     </div>	
-	<section class="page-section" id="services">
+	<section class="page-section" id="portfolio">
         <div class="container">
             <h2 class="text-center mt-0">Wohn-Esszimmer</h2>
             <hr class="divider my-4" />
