--- a/index.html
+++ b/index.html
@@ -89,6 +89,24 @@
 		});
 	});
 </script>
+<script type="text/javascript">
+	$( document ).ready(function( $ ) {
+		$( '#example0' ).sliderPro({
+			width: 960,
+			height: 500,
+			fade: true,
+			arrows: true,
+			buttons: false,
+			fullScreen: true,
+			shuffle: true,
+			smallSize: 500,
+			mediumSize: 1000,
+			largeSize: 3000,
+			thumbnailArrows: true,
+			autoplay: false
+		});
+	});
+</script>
 </head>
     
 <body id="page-top">
@@ -534,6 +552,124 @@
 			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/es_10.JPG"/>
 		</div>
     </div>	
+        <div class="container">
+	    <hr class="divider my-4" />
+            <h2 class="text-center mt-0">Badezimmer</h2>
+            <hr class="divider my-4" />
+	<div id="example0" class="slider-pro">
+		<div class="sp-slides">
+			<div class="sp-slide">
+				<img class="sp-image" src="../src/css/images/blank.gif" 
+					data-src="./assets/img/portfolio/fullsize/es_1.JPG"
+					data-small="./assets/img/portfolio/fullsize/es_1.JPG"
+					data-medium="./assets/img/portfolio/fullsize/es_1.JPG"
+					data-large="./assets/img/portfolio/fullsize/es_1.JPG"
+					data-retina="./assets/img/portfolio/fullsize/es_1.JPG"/>
+
+			</div>
+
+	        <div class="sp-slide">
+	        	<img class="sp-image" src="../src/css/images/blank.gif" 
+	        			data-src="./assets/img/portfolio/fullsize/es_2.JPG" 
+					data-small="./assets/img/portfolio/fullsize/es_2.JPG"
+					data-medium="./assets/img/portfolio/fullsize/es_2.JPG"
+					data-large="./assets/img/portfolio/fullsize/es_2.JPG"
+	        			data-retina="./assets/img/portfolio/fullsize/es_2.JPG"/>
+
+			</div>
+
+			<div class="sp-slide">
+				<img class="sp-image" src="../src/css/images/blank.gif" 
+					data-src="./assets/img/portfolio/fullsize/es_3.JPG" 
+					data-small="./assets/img/portfolio/fullsize/es_3.JPG"
+					data-medium="./assets/img/portfolio/fullsize/es_3.JPG"
+					data-large="./assets/img/portfolio/fullsize/es_3.JPG"
+					data-retina="./assets/img/portfolio/fullsize/es_3.JPG"/>
+
+			</div>
+
+			<div class="sp-slide">
+				<img class="sp-image" src="../src/css/images/blank.gif" 
+					data-src="./assets/img/portfolio/fullsize/es_4.JPG" 
+					data-small="./assets/img/portfolio/fullsize/es_4.JPG"
+					data-medium="./assets/img/portfolio/fullsize/es_4.JPG"
+					data-large="./assets/img/portfolio/fullsize/es_4.JPG"
+					data-retina="./assets/img/portfolio/fullsize/es_4.JPG"/>
+
+			</div>
+
+			<div class="sp-slide">
+				<img class="sp-image" src="../src/css/images/blank.gif" 
+					data-src="./assets/img/portfolio/fullsize/es_5.JPG" 
+					data-small="./assets/img/portfolio/fullsize/es_5.JPG"
+					data-medium="./assets/img/portfolio/fullsize/es_5.JPG"
+					data-large="./assets/img/portfolio/fullsize/es_5.JPG"
+					data-retina="./assets/img/portfolio/fullsize/es_5.JPG"/>
+
+			</div>
+
+			<div class="sp-slide">
+				<img class="sp-image" src="../src/css/images/blank.gif" 
+					data-src="./assets/img/portfolio/fullsize/es_6.JPG" 
+					data-small="./assets/img/portfolio/fullsize/es_6.JPG"
+					data-medium="./assets/img/portfolio/fullsize/es_6.JPG"
+					data-large="./assets/img/portfolio/fullsize/es_6.JPG"
+					data-retina="./assets/img/portfolio/fullsize/es_6.JPG"/>
+
+			</div>
+
+			<div class="sp-slide">
+				<img class="sp-image" src="../src/css/images/blank.gif" 
+					data-src="./assets/img/portfolio/fullsize/es_7.JPG" 
+					data-small="./assets/img/portfolio/fullsize/es_7.JPG"
+					data-medium="./assets/img/portfolio/fullsize/es_7.JPG"
+					data-large="./assets/img/portfolio/fullsize/es_7.JPG"
+					data-retina="./assets/img/portfolio/fullsize/es_7.JPG"/>
+
+			</div>
+
+			<div class="sp-slide">
+				<img class="sp-image" src="../src/css/images/blank.gif" 
+					data-src="./assets/img/portfolio/fullsize/es_8.JPG" 
+					data-small="./assets/img/portfolio/fullsize/es_8.JPG"
+					data-medium="./assets/img/portfolio/fullsize/es_8.JPG"
+					data-large="./assets/img/portfolio/fullsize/es_8.JPG"
+					data-retina="./assets/img/portfolio/fullsize/es_8.JPG"/>
+			</div>
+
+			<div class="sp-slide">
+				<img class="sp-image" src="../src/css/images/blank.gif" 
+					data-src="./assets/img/portfolio/fullsize/es_9.JPG" 
+					data-small="./assets/img/portfolio/fullsize/es_9.JPG"
+					data-medium="./assets/img/portfolio/fullsize/es_9.JPG"
+					data-large="./assets/img/portfolio/fullsize/es_9.JPG"
+					data-retina="./assets/img/portfolio/fullsize/es_9.JPG"/>
+
+			</div>
+
+			<div class="sp-slide">
+				<img class="sp-image" src="../src/css/images/blank.gif" 
+					data-src="./assets/img/portfolio/fullsize/es_10.JPG" 
+					data-small="./assets/img/portfolio/fullsize/es_10.JPG"
+					data-medium="./assets/img/portfolio/fullsize/es_10.JPG"
+					data-large="./assets/img/portfolio/fullsize/es_10.JPG"
+					data-retina="./assets/img/portfolio/fullsize/es_10.JPG"/>
+			</div>
+		</div>
+
+		<div class="sp-thumbnails">
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/es_1.JPG"/>
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/es_2.JPG"/>
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/es_3.JPG"/>
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/es_4.JPG"/>
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/es_5.JPG"/>
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/es_6.JPG"/>
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/es_7.JPG"/>
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/es_8.JPG"/>
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/es_9.JPG"/>
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/es_10.JPG"/>
+		</div>
+    </div>	
 </section>	
 		
 	
@@ -636,8 +772,8 @@
                 <div class="col-lg-3 ml-auto text-center mb-5 mb-lg-0">
                     <a class="d-block text-muted" href="tel:+43 660 40 471 51">
                         <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                        <div>+43 660 40 471 51</div>
-                        <div>+43 680 14 138 88</div>
+                        <div>+43 660 40 471 51 Michael Kritzl</div>
+                        <div>+43 680 14 138 88 Friedrich Gassner</div>
                     </a>
                 </div>
                 <div class="col-lg-3 mr-auto text-center mb-5 mb-lg-0">
@@ -710,3 +846,4 @@
 </body>
 
 </html>
+
