--- a/index.html
+++ b/index.html
@@ -560,114 +560,50 @@
 		<div class="sp-slides">
 			<div class="sp-slide">
 				<img class="sp-image" src="../src/css/images/blank.gif" 
-					data-src="./assets/img/portfolio/fullsize/es_1.JPG"
-					data-small="./assets/img/portfolio/fullsize/es_1.JPG"
-					data-medium="./assets/img/portfolio/fullsize/es_1.JPG"
-					data-large="./assets/img/portfolio/fullsize/es_1.JPG"
-					data-retina="./assets/img/portfolio/fullsize/es_1.JPG"/>
+					data-src="./assets/img/portfolio/fullsize/Bad1.jpeg"
+					data-small="./assets/img/portfolio/fullsize/Bad1.jpeg"
+					data-medium="./assets/img/portfolio/fullsize/Bad1.jpeg"
+					data-large="./assets/img/portfolio/fullsize/Bad1.jpeg"
+					data-retina="./assets/img/portfolio/fullsize/Bad1.jpeg"/>
 
 			</div>
 
 	        <div class="sp-slide">
 	        	<img class="sp-image" src="../src/css/images/blank.gif" 
-	        			data-src="./assets/img/portfolio/fullsize/es_2.JPG" 
-					data-small="./assets/img/portfolio/fullsize/es_2.JPG"
-					data-medium="./assets/img/portfolio/fullsize/es_2.JPG"
-					data-large="./assets/img/portfolio/fullsize/es_2.JPG"
-	        			data-retina="./assets/img/portfolio/fullsize/es_2.JPG"/>
+	        			data-src="./assets/img/portfolio/fullsize/Bad2.jpeg" 
+					data-small="./assets/img/portfolio/fullsize/Bad2.jpeg"
+					data-medium="./assets/img/portfolio/fullsize/Bad2.jpeg"
+					data-large="./assets/img/portfolio/fullsize/Bad2.jpeg"
+	        			data-retina="./assets/img/portfolio/fullsize/Bad2.jpeg"/>
 
 			</div>
 
 			<div class="sp-slide">
 				<img class="sp-image" src="../src/css/images/blank.gif" 
-					data-src="./assets/img/portfolio/fullsize/es_3.JPG" 
-					data-small="./assets/img/portfolio/fullsize/es_3.JPG"
-					data-medium="./assets/img/portfolio/fullsize/es_3.JPG"
-					data-large="./assets/img/portfolio/fullsize/es_3.JPG"
-					data-retina="./assets/img/portfolio/fullsize/es_3.JPG"/>
+					data-src="./assets/img/portfolio/fullsize/Bad3.jpeg" 
+					data-small="./assets/img/portfolio/fullsize/Bad3.jpeg"
+					data-medium="./assets/img/portfolio/fullsize/Bad3.jpeg"
+					data-large="./assets/img/portfolio/fullsize/Bad3.jpeg"
+					data-retina="./assets/img/portfolio/fullsize/Bad3.jpeg"/>
 
 			</div>
 
 			<div class="sp-slide">
 				<img class="sp-image" src="../src/css/images/blank.gif" 
-					data-src="./assets/img/portfolio/fullsize/es_4.JPG" 
-					data-small="./assets/img/portfolio/fullsize/es_4.JPG"
-					data-medium="./assets/img/portfolio/fullsize/es_4.JPG"
-					data-large="./assets/img/portfolio/fullsize/es_4.JPG"
-					data-retina="./assets/img/portfolio/fullsize/es_4.JPG"/>
+					data-src="./assets/img/portfolio/fullsize/Bad4.jpeg" 
+					data-small="./assets/img/portfolio/fullsize/Bad4.jpeg"
+					data-medium="./assets/img/portfolio/fullsize/Bad4.jpeg"
+					data-large="./assets/img/portfolio/fullsize/eBad4.jpeg"
+					data-retina="./assets/img/portfolio/fullsize/Bad4.jpeg"/>
 
-			</div>
-
-			<div class="sp-slide">
-				<img class="sp-image" src="../src/css/images/blank.gif" 
-					data-src="./assets/img/portfolio/fullsize/es_5.JPG" 
-					data-small="./assets/img/portfolio/fullsize/es_5.JPG"
-					data-medium="./assets/img/portfolio/fullsize/es_5.JPG"
-					data-large="./assets/img/portfolio/fullsize/es_5.JPG"
-					data-retina="./assets/img/portfolio/fullsize/es_5.JPG"/>
-
-			</div>
-
-			<div class="sp-slide">
-				<img class="sp-image" src="../src/css/images/blank.gif" 
-					data-src="./assets/img/portfolio/fullsize/es_6.JPG" 
-					data-small="./assets/img/portfolio/fullsize/es_6.JPG"
-					data-medium="./assets/img/portfolio/fullsize/es_6.JPG"
-					data-large="./assets/img/portfolio/fullsize/es_6.JPG"
-					data-retina="./assets/img/portfolio/fullsize/es_6.JPG"/>
-
-			</div>
-
-			<div class="sp-slide">
-				<img class="sp-image" src="../src/css/images/blank.gif" 
-					data-src="./assets/img/portfolio/fullsize/es_7.JPG" 
-					data-small="./assets/img/portfolio/fullsize/es_7.JPG"
-					data-medium="./assets/img/portfolio/fullsize/es_7.JPG"
-					data-large="./assets/img/portfolio/fullsize/es_7.JPG"
-					data-retina="./assets/img/portfolio/fullsize/es_7.JPG"/>
-
-			</div>
-
-			<div class="sp-slide">
-				<img class="sp-image" src="../src/css/images/blank.gif" 
-					data-src="./assets/img/portfolio/fullsize/es_8.JPG" 
-					data-small="./assets/img/portfolio/fullsize/es_8.JPG"
-					data-medium="./assets/img/portfolio/fullsize/es_8.JPG"
-					data-large="./assets/img/portfolio/fullsize/es_8.JPG"
-					data-retina="./assets/img/portfolio/fullsize/es_8.JPG"/>
-			</div>
-
-			<div class="sp-slide">
-				<img class="sp-image" src="../src/css/images/blank.gif" 
-					data-src="./assets/img/portfolio/fullsize/es_9.JPG" 
-					data-small="./assets/img/portfolio/fullsize/es_9.JPG"
-					data-medium="./assets/img/portfolio/fullsize/es_9.JPG"
-					data-large="./assets/img/portfolio/fullsize/es_9.JPG"
-					data-retina="./assets/img/portfolio/fullsize/es_9.JPG"/>
-
-			</div>
-
-			<div class="sp-slide">
-				<img class="sp-image" src="../src/css/images/blank.gif" 
-					data-src="./assets/img/portfolio/fullsize/es_10.JPG" 
-					data-small="./assets/img/portfolio/fullsize/es_10.JPG"
-					data-medium="./assets/img/portfolio/fullsize/es_10.JPG"
-					data-large="./assets/img/portfolio/fullsize/es_10.JPG"
-					data-retina="./assets/img/portfolio/fullsize/es_10.JPG"/>
 			</div>
 		</div>
 
 		<div class="sp-thumbnails">
-			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/es_1.JPG"/>
-			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/es_2.JPG"/>
-			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/es_3.JPG"/>
-			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/es_4.JPG"/>
-			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/es_5.JPG"/>
-			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/es_6.JPG"/>
-			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/es_7.JPG"/>
-			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/es_8.JPG"/>
-			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/es_9.JPG"/>
-			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/es_10.JPG"/>
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Bad1.jpeg"/>
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Bad2.jpeg"/>
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Bad3.jpeg"/>
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Bad4.jpeg"/>
 		</div>
     </div>	
 </section>	
@@ -772,8 +708,8 @@
                 <div class="col-lg-3 ml-auto text-center mb-5 mb-lg-0">
                     <a class="d-block text-muted" href="tel:+43 660 40 471 51">
                         <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                        <div>+43 660 40 471 51 Michael Kritzl</div>
-                        <div>+43 680 14 138 88 Friedrich Gassner</div>
+                        <div>+43 660 40 471 51      Michael Kritzl</div>
+                        <div>+43 680 14 138 88      Friedrich Gassner</div>
                     </a>
                 </div>
                 <div class="col-lg-3 mr-auto text-center mb-5 mb-lg-0">
@@ -846,4 +782,3 @@
 </body>
 
 </html>
-
