--- a/index.html
+++ b/index.html
@@ -107,6 +107,24 @@
 		});
 	});
 </script>
+<script type="text/javascript">
+	$( document ).ready(function( $ ) {
+		$( '#example6' ).sliderPro({
+			width: 960,
+			height: 500,
+			fade: true,
+			arrows: true,
+			buttons: false,
+			fullScreen: true,
+			shuffle: true,
+			smallSize: 500,
+			mediumSize: 1000,
+			largeSize: 3000,
+			thumbnailArrows: true,
+			autoplay: false
+		});
+	});
+</script>
 </head>
     
 <body id="page-top">
@@ -597,6 +615,15 @@
 					data-retina="./assets/img/portfolio/fullsize/Bad4.jpeg"/>
 
 			</div>
+			<div class="sp-slide">
+				<img class="sp-image" src="../src/css/images/blank.gif" 
+					data-src="./assets/img/portfolio/fullsize/Bad5.jpeg" 
+					data-small="./assets/img/portfolio/fullsize/Bad5.jpeg"
+					data-medium="./assets/img/portfolio/fullsize/Bad5.jpeg"
+					data-large="./assets/img/portfolio/fullsize/eBad5.jpeg"
+					data-retina="./assets/img/portfolio/fullsize/Bad5.jpeg"/>
+
+			</div>
 		</div>
 
 		<div class="sp-thumbnails">
@@ -604,6 +631,28 @@
 			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Bad2.jpeg"/>
 			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Bad3.jpeg"/>
 			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Bad4.jpeg"/>
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Bad5.jpeg"/>
+		</div>
+    </div>	
+        <div class="container">
+	    <hr class="divider my-4" />
+            <h2 class="text-center mt-0">Böden Türen Stiegen</h2>
+            <hr class="divider my-4" />
+	<div id="example6" class="slider-pro">
+		<div class="sp-slides">
+			<div class="sp-slide">
+				<img class="sp-image" src="../src/css/images/blank.gif" 
+					data-src="./assets/img/portfolio/fullsize/St1.jpg"
+					data-small="./assets/img/portfolio/fullsize/St1.jpg"
+					data-medium="./assets/img/portfolio/fullsize/St1.jpg"
+					data-large="./assets/img/portfolio/fullsize/St1.jpg"
+					data-retina="./assets/img/portfolio/fullsize/St1.jpg"/>
+
+			</div>
+		</div>
+
+		<div class="sp-thumbnails">
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/St1.jpg"/>
 		</div>
     </div>	
 </section>	
@@ -782,3 +831,4 @@
 </body>
 
 </html>
+
