--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     <div class="mt-5">
                         <i class="fas fa-4x fa-tree text-primary mb-4"></i>
                         <h3 class="h4 mb-2">Produktion</h3>
-                        <p class="text-muted mb-0">Wir Produzieren mit modernsten Maschinen alles individuel nach Ihren
+                        <p class="text-muted mb-0">Wir Produzieren mit modernsten Maschinen alles individuell nach Ihren
                             Wünschen.</p>
                     </div>
                 </div>
