--- a/index.html
+++ b/index.html
@@ -644,10 +644,46 @@
 					data-large="./assets/img/portfolio/fullsize/St1.jpg"
 					data-retina="./assets/img/portfolio/fullsize/St1.jpg"/>
 			</div>
+			<div class="sp-slide">
+				<img class="sp-image" src="../src/css/images/blank.gif" 
+					data-src="./assets/img/portfolio/fullsize/Stiege_1.jpg"
+					data-small="./assets/img/portfolio/fullsize/Stiege_1.jpg"
+					data-medium="./assets/img/portfolio/fullsize/Stiege_1.jpg"
+					data-large="./assets/img/portfolio/fullsize/Stiege_1.jpg"
+					data-retina="./assets/img/portfolio/fullsize/Stiege_1.jpg"/>
+			</div>
+			<div class="sp-slide">
+				<img class="sp-image" src="../src/css/images/blank.gif" 
+					data-src="./assets/img/portfolio/fullsize/Stiege_2.jpg"
+					data-small="./assets/img/portfolio/fullsize/Stiege_2.jpg"
+					data-medium="./assets/img/portfolio/fullsize/Stiege_2.jpg"
+					data-large="./assets/img/portfolio/fullsize/Stiege_2.jpg"
+					data-retina="./assets/img/portfolio/fullsize/Stiege_2.jpg"/>
+			</div>
+			<div class="sp-slide">
+				<img class="sp-image" src="../src/css/images/blank.gif" 
+					data-src="./assets/img/portfolio/fullsize/Stiege_3.jpg"
+					data-small="./assets/img/portfolio/fullsize/Stiege_3.jpg"
+					data-medium="./assets/img/portfolio/fullsize/Stiege_3.jpg"
+					data-large="./assets/img/portfolio/fullsize/Stiege_3.jpg"
+					data-retina="./assets/img/portfolio/fullsize/Stiege_3.jpg"/>
+			</div>
+			<div class="sp-slide">
+				<img class="sp-image" src="../src/css/images/blank.gif" 
+					data-src="./assets/img/portfolio/fullsize/Stiege_4.jpg"
+					data-small="./assets/img/portfolio/fullsize/Stiege_4.jpg"
+					data-medium="./assets/img/portfolio/fullsize/Stiege_4.jpg"
+					data-large="./assets/img/portfolio/fullsize/Stiege_4.jpg"
+					data-retina="./assets/img/portfolio/fullsize/Stiege_4.jpg"/>
+			</div>
 		</div>
 
 		<div class="sp-thumbnails">
 			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/St1.jpg"/>
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Stiege_1.jpg"/>
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Stiege_2.jpg"/>
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Stiege_3.jpg"/>
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Stiege_4.jpg"/>
 		</div>
     </div>	
 </section>	
@@ -826,4 +862,3 @@
 </body>
 
 </html>
-
