--- a/index.html
+++ b/index.html
@@ -750,6 +750,13 @@
                         <p class="text-white-50 mb-2">Montage und Produktion</p>
                     </div>
                 </div>
+		    
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="member-box">
+                        <h3 class="h4 mb-2 mt-2">Eva Gamperl</h3>
+                        <p class="text-white-50 mb-2">Büro</p>
+                    </div>
+                </div>
 
             </div>
         </div>
