--- a/index.html
+++ b/index.html
@@ -754,7 +754,18 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="member-box">
                         <h3 class="h4 mb-2 mt-2">Eva Gamperl</h3>
-                        <p class="text-white-50 mb-2">Büro</p>
+                        <p class="text-white-50 mb-2">Büro und Buchhaltung</p>
+			<p class="text-white-50">
+                            <i class="fas fa-envelope"></i>
+                            <a href="mailto:eva.gamperl@kriga.at">michael.plank@kriga.at</a>
+                        </p>
+                    </div>
+                </div>
+		    
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="member-box">
+                        <h3 class="h4 mb-2 mt-2">Kristina Ivancevic</h3>
+                        <p class="text-white-50 mb-2">in Ausbildung</p>
                     </div>
                 </div>
 
