--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@
                         <p class="text-white-50 mb-2">Büro und Buchhaltung</p>
 			<p class="text-white-50">
                             <i class="fas fa-envelope"></i>
-                            <a href="mailto:eva.gamperl@kriga.at">michael.plank@kriga.at</a>
+                            <a href="mailto:eva.gamperl@kriga.at">eva.gamperl@kriga.at</a>
                         </p>
                     </div>
                 </div>
