--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@
 		    
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="member-box">
-                        <h3 class="h4 mb-2 mt-2">Kristina Ivancevic</h3>
+                        <h3 class="h4 mb-2 mt-2">Stephan Ressl</h3>
                         <p class="text-white-50 mb-2">in Ausbildung</p>
                     </div>
                 </div>
